Fixed the project section, added a mock project and fixed responsiveness of the project cards. Also aligned the main text

--- a/darkindex.css
+++ b/darkindex.css
@@ -118,6 +118,7 @@ a:active {
 
 .name p {
     font-size: 0.9rem;
+    text-align: center;
 }
 
 /* Second Navigation Styles */
@@ -338,9 +339,13 @@ a:active {
 .projects {
     min-height: 91vh;
     padding: 2vh;
-    max-width: 80%;
+    max-width: 100vw;
     margin: auto;
     text-align: justify;
+}
+
+#projectsheading {
+    margin-left: 1.2rem;
 }
 
 .projectdesc {
@@ -368,31 +373,58 @@ a:active {
 }
 
 .projectcard {
-    height: 60vh;  
-    width: 70vw;
+    height: 70vh;
+    width: 75vw;
+    max-width: 100%;
+    padding: 10px;
     border-radius: 10px;
     background-color: #112240;
     box-shadow: 3px 5px 8px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    scroll-snap-align: start;
+    scroll-snap-align: center;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 1em;
     color: #ccd6f6;
     transition: transform 0.3s, box-shadow 0.3s;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
+/*
 .projectcard:hover {
     transform: translateY(-10px);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
     background-color: #142a50;
 }
+*/
 
 .scroll-container::-webkit-scrollbar {
     display: none;
 }
+
+.projectimg {
+    height: 30%;
+    margin-top: 15px; /* Centering within the card */
+}
+
+.projectpara {
+    font-size: 1rem;
+    padding: 15px;
+    text-align: justify;
+    height:40%;
+    overflow-wrap: break-word;
+    white-space: normal;
+}
+
+.projectbutton {
+    padding: 10px;
+    width: auto;
+    height: auto;
+    margin-bottom: 15px;
+}
+
 
 
 /* Work Experience Section (experience part) */
@@ -544,6 +576,10 @@ footer {
     margin-bottom: 0%;
 }
 
+.projects {
+    max-width: 80%;
+}
+
 .projectcard {
     width: 50vw;
 }
@@ -640,9 +676,19 @@ footer {
     scroll-behavior: smooth;
 } 
 
+.projects {
+    max-width: 80%;
+}
+
 .projectcard {
-    width: 40vw;
+    width: 30vw;
     height: 70vh;
+}
+
+.projectcard:hover {
+    transform: translateY(-10px);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+    background-color: #142a50;
 }
 
 .workexperiencetitle {
@@ -652,6 +698,10 @@ footer {
 }
 
 @media screen and (min-width: 1440px) {
+
+.projects {
+    max-width: 90%;
+}
 
 .projectcard {
     width: 25vw;
