--- a/index.css
+++ b/index.css
@@ -119,6 +119,7 @@ a:active {
 
 .name p {
     font-size: 0.9rem;
+    text-align: center;
 }
 
 /* Second Navigation Styles */
@@ -328,9 +329,13 @@ a:active {
 .projects {
     min-height: 91vh;
     padding: 2vh;
-    max-width: 80%;
+    max-width: 100vw;
     margin: auto;
     text-align: justify;
+}
+
+#projectsheading {
+    margin-left: 1.2rem;
 }
 
 .projectdesc {
@@ -358,31 +363,58 @@ a:active {
 }
 
 .projectcard {
-    height: 60vh;  
-    width: 70vw;
+    height: 70vh;
+    width: 75vw;
+    max-width: 100%;
+    padding: 10px;
     border-radius: 10px;
     background-color: #f0f0f0;
     box-shadow: 3px 5px 8px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    scroll-snap-align: start;
+    scroll-snap-align: center;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 1em;
     color: #333;
     transition: transform 0.3s, box-shadow 0.3s;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items:center;
+    justify-content:space-between;  
+    flex-direction: column;
 }
-
+/*
 .projectcard:hover {
     transform: translateY(-10px);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
     background-color: #e0e0e0;
 }
+*/
 
 .scroll-container::-webkit-scrollbar {
     display: none;
 }
+
+.projectimg {
+    height: 30%;
+    margin-top: 15px; /* Centering within the card */
+}
+
+.projectpara {
+    font-size: 1rem;
+    padding: 15px;
+    text-align: justify;
+    height:40%;
+    overflow-wrap: break-word;
+    white-space: normal;
+}
+
+.projectbutton {
+    padding: 10px;
+    width: auto;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+
 
 
 /* Work Experience Section (experience part) */
@@ -535,6 +567,10 @@ footer {
     margin-bottom: 0%;
 }
 
+.projects {
+    max-width: 80%;
+}
+
 .projectcard {
     width: 50vw;
 }
@@ -630,11 +666,20 @@ footer {
     scroll-behavior: smooth;
 } 
 
+.projects {
+    max-width: 80%;
+}
+
 .projectcard {
-    width: 40vw;
+    width: 30vw;
     height: 70vh;
 }
 
+.projectcard:hover {
+    transform: translateY(-10px);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+    background-color: #e0e0e0;
+}
 
 .workexperiencetitle {
     padding-left: 0;
@@ -644,6 +689,10 @@ footer {
 
 
 @media screen and (min-width: 1440px) {
+
+.projects {
+    max-width: 90%;
+}
 
 .projectcard {
     width: 25vw;
